[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mockmesh-aws"
version = "0.2.0"
description = "An in-process, schema-driven, zero-dependency AWS auto-mocking engine for Python developers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Aman Kumar"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "botocore>=1.0.0",
    "boto3>=1.0.0",
]

[project.scripts]
mockmesh = "mockmesh.server:main"

[project.urls]
Homepage = "https://github.com/devil15371/mockmesh"
Issues = "https://github.com/devil15371/mockmesh/issues"
